--- a/clarusway-full-stack-tr-12-22/django/class-notes/015_PersonnelApp_Setup/requirements.txt
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/015_PersonnelApp_Setup/requirements.txt
@@ -15,6 +15,7 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 packaging==22.0
+Pillow==9.4.0
 psycopg2==2.9.5
 pycodestyle==2.10.0
 python-decouple==3.6
