--- a/clarusway-full-stack-tr-12-22/django/class-notes/017_Docker/docker-compose.yml
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/017_Docker/docker-compose.yml
@@ -1,28 +1,28 @@
-# version: "3.9" # optional
+version: '3.8' # optional
 
 services:
 
   frontend:
-    container_name: frontend
-    image: docker-compose-fronted
+    image: docker-compose-frontend
     build: ./frontend
     ports:
       - 3000:3000
-      - 80:3000
     restart: on-failure
     depends_on:
-      - backend # first run backend.
+      - backend
+    volumes:
+      - ./frontend:/frontend
 
   backend:
-    # container_name: backend # optional (default:key)
-    image: docker-compose-backend # build, if no image
-    build: ./backend # Which folder (project folder) (must be dockerfile in the folder)
-    ports: # external:internal ports
+    image: docker-compose-backend
+    build: ./backend
+    ports:
       - 8000:8000
-    restart: on-failure # when restart
-    volumes: # external:internal volumes
+    restart: on-failure
+    volumes:
       - ./backend/db.sqlite3:/backend/db.sqlite3
+      - ./backend:/backend
 
-# $ docker compose up # compose çalıştır.
-# $ docker compose up -d --build # compose daemon aç ve tekrar build et.
-# $ docker compose down # compose kapat.
+  
+
+
