--- a/clarusway-full-stack-tr-12-22/django/class-notes/017_Docker/frontend/dockerfile
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/017_Docker/frontend/dockerfile
@@ -1,6 +1,8 @@
 FROM node:19-slim
 WORKDIR /frontend
-COPY . .
-RUN yarn
+COPY package.json .
+RUN npm install
+COPY . . 
+CMD ["npm", "start"]
 EXPOSE 3000
-CMD ["yarn", "start"]
+
