--- a/clarusway-full-stack-tr-12-22/django/class-notes/018_Admin_site/requirements.txt
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/018_Admin_site/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 autopep8==2.0.1
 Django==4.1.5
 Faker==16.6.0
+Pillow==9.4.0
 pycodestyle==2.10.0
 python-dateutil==2.8.2
 six==1.16.0
